src/pages/map/mapaccess.scss
page-map-access {
  .zoom {
    position: fixed;
    width: 100%;
    height: 100%;
  }
text {
  font-family:Helvetica, Arial, sans-serif;
}

    .cls-1 {
      isolation: isolate;
    }

    .cls-2 {
      fill: #abb6bb;
    }

    .cls-3 {
      fill: #acb6bc;
    }

    .cls-4 {
      fill: #7c858a;
    }

    .cls-5 {
      fill: #acb7bc;
    }

    .cls-100, .cls-102, .cls-108, .cls-120, .cls-126, .cls-127, .cls-6, .cls-86, .cls-87 {
      font-size: 18px;
    }

    .cls-6, .cls-8 {
      fill: #808285;
    }

    .cls-137, .cls-6, .cls-86, .cls-87 {
      font-family: Helvetica, Arial, sans-serif;
      font-style: italic;
    }

    .cls-100, .cls-103, .cls-120, .cls-6, .cls-86, .cls-87 {
      letter-spacing: -0.02em;
    }

    .cls-145, .cls-19, .cls-20, .cls-28, .cls-31, .cls-7, .cls-88 {
      fill: none;
    }

    .cls-7 {
      stroke: #808285;
    }

    .cls-136, .cls-145, .cls-19, .cls-20, .cls-28, .cls-29, .cls-31, .cls-7, .cls-88 {
      stroke-miterlimit: 10;
    }

    .cls-7, .cls-88 {
      stroke-width: 9.34px;
    }

    .cls-9 {
      fill: #9486a6;
    }

    .cls-10 {
      fill: #9487a6;
    }

    .cls-11 {
      fill: #6c627a;
    }

    .cls-12 {
      fill: #8ca1a7;
    }

    .cls-13 {
      fill: #8da2a8;
    }

    .cls-14 {
      fill: #65767b;
    }

    .cls-15 {
      fill: #bebebe;
    }

    .cls-16 {
      fill: #bfbfbf;
    }

    .cls-17 {
      fill: #858585;
    }

    .cls-136, .cls-144, .cls-18, .cls-86 {
      fill: #fff;
    }

    .cls-136, .cls-145, .cls-19, .cls-20, .cls-28 {
      stroke: #231f20;
      stroke-width: 2.81px;
    }

    .cls-20 {
      stroke-dasharray: 5.64 5.64;
    }

    .cls-21, .cls-25 {
      font-size: 37.38px;
    }

    .cls-106, .cls-119, .cls-127, .cls-137, .cls-146, .cls-21, .cls-25 {
      fill: #231f20;
    }

    .cls-21 {
      font-family: Helvetica, Arial, sans-serif;
      font-weight: bold;
    }

    .cls-119, .cls-144, .cls-147, .cls-21, .cls-25 {
      font-weight: 700;
    }

    .cls-22 {
      letter-spacing: 0.01em;
    }

    .cls-23 {
      letter-spacing: -0.03em;
    }

    .cls-24 {
      letter-spacing: -0.04em;
    }

    .cls-25 {
      font-family: Helvetica, Arial, sans-serif;
      font-weight: 400;
    }

    .cls-26 {
      letter-spacing: 0em;
    }

    .cls-27 {
      letter-spacing: -0.01em;
    }

    .cls-28 {
      stroke-dasharray: 5.63 5.63;
    }

    .cls-29 {
      fill: #9c81bb;
      stroke: #adacad;
    }

    .cls-29, .cls-31 {
      stroke-width: 2px;
    }

    .cls-30 {
      fill: #868686;
    }

    .cls-31 {
      stroke: #668389;
    }

    .cls-32 {
      fill: url(#linear-gradient);
    }

    .cls-33 {
      fill: url(#linear-gradient-2);
    }

    .cls-34 {
      fill: url(#linear-gradient-3);
    }

    .cls-35 {
      fill: url(#linear-gradient-4);
    }

    .cls-36 {
      fill: url(#linear-gradient-5);
    }

    .cls-37 {
      fill: url(#linear-gradient-6);
    }

    .cls-38 {
      fill: url(#linear-gradient-7);
    }

    .cls-39 {
      fill: url(#linear-gradient-8);
    }

    .cls-40 {
      fill: url(#linear-gradient-9);
    }

    .cls-41 {
      fill: url(#linear-gradient-10);
    }

    .cls-42 {
      fill: url(#linear-gradient-11);
    }

    .cls-43 {
      fill: url(#linear-gradient-12);
    }

    .cls-44 {
      fill: url(#linear-gradient-13);
    }

    .cls-45 {
      fill: url(#linear-gradient-14);
    }

    .cls-46 {
      fill: url(#linear-gradient-15);
    }

    .cls-47 {
      fill: url(#linear-gradient-16);
    }

    .cls-48 {
      fill: url(#linear-gradient-17);
    }

    .cls-49 {
      fill: url(#linear-gradient-18);
    }

    .cls-50 {
      fill: url(#linear-gradient-19);
    }

    .cls-51 {
      fill: url(#linear-gradient-20);
    }

    .cls-52 {
      fill: url(#linear-gradient-21);
    }

    .cls-53 {
      fill: url(#linear-gradient-22);
    }

    .cls-54 {
      fill: url(#linear-gradient-23);
    }

    .cls-55 {
      fill: url(#linear-gradient-24);
    }

    .cls-56 {
      fill: url(#linear-gradient-25);
    }

    .cls-57 {
      fill: url(#linear-gradient-26);
    }

    .cls-58 {
      fill: url(#linear-gradient-27);
    }

    .cls-59 {
      fill: url(#linear-gradient-28);
    }

    .cls-60 {
      fill: url(#linear-gradient-29);
    }

    .cls-61 {
      fill: url(#linear-gradient-30);
    }

    .cls-62 {
      fill: url(#linear-gradient-31);
    }

    .cls-63 {
      fill: url(#linear-gradient-32);
    }

    .cls-64 {
      fill: url(#linear-gradient-33);
    }

    .cls-65 {
      fill: url(#linear-gradient-34);
    }

    .cls-66 {
      fill: url(#linear-gradient-35);
    }

    .cls-67 {
      fill: url(#linear-gradient-36);
    }

    .cls-68 {
      fill: url(#linear-gradient-37);
    }

    .cls-69 {
      fill: url(#linear-gradient-38);
    }

    .cls-70 {
      fill: url(#linear-gradient-39);
    }

    .cls-71 {
      fill: url(#linear-gradient-40);
    }

    .cls-72 {
      fill: url(#linear-gradient-41);
    }

    .cls-73 {
      fill: url(#linear-gradient-42);
    }

    .cls-74 {
      fill: url(#linear-gradient-43);
    }

    .cls-75 {
      fill: url(#linear-gradient-44);
    }

    .cls-76 {
      fill: url(#linear-gradient-45);
    }

    .cls-77 {
      fill: url(#linear-gradient-46);
    }

    .cls-78 {
      fill: url(#linear-gradient-47);
    }

    .cls-79 {
      fill: url(#linear-gradient-48);
    }

    .cls-80 {
      fill: url(#linear-gradient-49);
    }

    .cls-81 {
      fill: url(#linear-gradient-50);
    }

    .cls-82 {
      fill: url(#linear-gradient-51);
    }

    .cls-83 {
      fill: url(#linear-gradient-52);
    }

    .cls-84 {
      fill: url(#linear-gradient-53);
    }

    .cls-85 {
      fill: url(#linear-gradient-54);
    }

    .cls-87, .cls-89 {
      fill: #f9f9fa;
    }

    .cls-88 {
      stroke: #f9f9fa;
    }

    .cls-90 {
      fill: #3c5eab;
    }

    .cls-91 {
      fill: url(#linear-gradient-55);
    }

    .cls-92 {
      fill: url(#linear-gradient-56);
    }

    .cls-93 {
      fill: url(#linear-gradient-57);
    }

    .cls-94 {
      fill: url(#linear-gradient-58);
    }

    .cls-95 {
      fill: url(#linear-gradient-59);
    }

    .cls-96 {
      fill: url(#linear-gradient-60);
    }

    .cls-97 {
      fill: url(#linear-gradient-61);
    }

    .cls-98 {
      fill: url(#linear-gradient-62);
    }

    .cls-99 {
      fill: url(#linear-gradient-63);
    }

    .cls-100, .cls-102 {
      fill: #edefef;
    }

    .cls-100, .cls-102, .cls-106, .cls-108, .cls-120, .cls-126, .cls-127 {
      font-family: Helvetica, Arial, sans-serif;
    }

    .cls-101 {
      letter-spacing: -0.03em;
    }

    .cls-102, .cls-108 {
      letter-spacing: -0.07em;
    }

    .cls-104 {
      letter-spacing: -0.03em;
    }

    .cls-105 {
      letter-spacing: -0.03em;
    }

    .cls-106 {
      font-size: 21.8px;
      letter-spacing: -0.03em;
    }

    .cls-107 {
      letter-spacing: -0.02em;
    }

    .cls-108, .cls-120, .cls-126 {
      fill: #5d5e5e;
    }

    .cls-109 {
      letter-spacing: -0.12em;
    }

    .cls-110 {
      letter-spacing: -0.04em;
    }

    .cls-111 {
      fill: #7f6223;
    }

    .cls-112 {
      fill: #755a1f;
    }

    .cls-113 {
      fill: #654e16;
    }

    .cls-114 {
      fill: #6d541b;
    }

    .cls-115 {
      fill: #70561c;
    }

    .cls-116 {
      fill: #775b1f;
    }

    .cls-117 {
      fill: #7f6123;
    }

    .cls-118 {
      fill: #afbf9d;
    }

    .cls-119 {
      font-size: 17.74px;
      letter-spacing: -0.05em;
    }

    .cls-119, .cls-144, .cls-147 {
      font-family: Helvetica, Arial, sans-serif;
      font-weight: bold;
    }

    .cls-121 {
      letter-spacing: -0.06em;
    }

    .cls-122 {
      letter-spacing: -0.03em;
    }

    .cls-123 {
      letter-spacing: -0.04em;
    }

    .cls-124 {
      letter-spacing: -0.05em;
    }

    .cls-125 {
      letter-spacing: -0.04em;
    }

    .cls-126 {
      letter-spacing: -0.03em;
    }

    .cls-127 {
      letter-spacing: -0.13em;
    }

    .cls-128 {
      letter-spacing: -0.03em;
    }

    .cls-129 {
      fill: #923206;
    }

    .cls-130 {
      fill: #a3390f;
    }

    .cls-131 {
      fill: #ca491b;
    }

    .cls-132 {
      fill: #c8491b;
    }

    .cls-133 {
      fill: #b44116;
    }

    .cls-134 {
      fill: #a93c12;
    }

    .cls-135 {
      fill: #b74217;
    }

    .cls-136, .cls-145 {
      stroke-dasharray: 5.63 5.63;
    }

    .cls-137, .cls-147 {
      font-size: 21px;
      letter-spacing: -0.02em;
    }

    .cls-138 {
      fill: url(#linear-gradient-64);
    }

    .cls-139 {
      fill: url(#linear-gradient-65);
    }

    .cls-140 {
      fill: #b64116;
    }

    .cls-141 {
      fill: #ac3d13;
    }

    .cls-142 {
      fill: #b34015;
    }

    .cls-143 {
      fill: #913106;
    }

    .cls-144 {
      font-size: 30px;
      letter-spacing: -0.02em;
    }

    .cls-147 {
      fill: #f2f0f1;
    }
}

